# AlbertaGamePopBot

./: .env.example  .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: ruff.yml
app/: __main__.py  config.py  core.py  setup.py  utils.py  views.py
app/db/: database.py  models.py
app/features/: slaughter.py  suggestions.py
nix/: devshell.nix  overlay.nix  package.nix  python-app.nix
